[CSS] Fix link invalidation when color depends on the visited style https://bugs.webkit.org/show_bug.cgi?id=61697 rdar://97529381

Reviewed by Simon Fraser.

This patch fixes the comparison for the "color" property,
by comparing the used value used for rendering
(taking into account the duality color/visitedLinkColor).

We should ideally do that for each color property
(backgroundColor/visitedLinkBackgroundColor...etc) in a followup patch.

Also, this doesn't change the current algorithm which requires repaint
whenever the color value changes without looking at its actual usage
in other properties (like what is done in the SVGRenderStyle diff).

* LayoutTests/fast/css/link-style-color-invalidation-expected.html: Added.
* LayoutTests/fast/css/link-style-color-invalidation.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::currentColorWithVisitedDiffers):
(WebCore::RenderStyle::changeRequiresRepaint const):
(WebCore::RenderStyle::changeRequiresRepaintIfText const):

Canonical link: https://commits.webkit.org/279411@main